# sonar-ai-classification-pytorch

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: red_neuronal_sonar.ipynb
notebooks/modelos/: modelo_sonar_entrenado.pth
notebooks/runs/experimento_sonar/: events.out.tfevents.1773009120.DESKTOP-ALEXIS.11076.19
