[project]
name = "sonar-ai-classification-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "setuptools<=82.0.0",
    "tensorboard<=2.20.0",
    "torch>=2.10.0",
]
